# file2task

./: .gitignore  LICENSE  README.md  pyproject.toml
file2task/: __init__.py
